Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77834

Some FBX converted models cannot be rendered properly due to culling

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 5.14
    • Quick: 3D
    • None

      Culling is enabled by default in Qt Quick 3D.

      However, due to culling some models cannot be rendered properly.

      Attached files are a FBX model of an automotive wheel and an application showing its QQ3D conversion result.

      "culling_enabled.png" is rendered with default QQ3D and "culling_disabled.png" is rendered with customized QQ3D in which culling is disabled by default.

      I am not sure this is the problem of QQ3D or not.

      Possible solutions that I come up to mind are,

      1. Disable culling by default
      2. Fix meshes at conversion
      3. Fix models by modeling tool (blender or similar)
      4. Any other solutions?

      What will be the best solution?

        1. wheel.fbx
          265 kB
        2. WheelCulling.zip
          183 kB
        3. culling_enabled.png
          culling_enabled.png
          22 kB
        4. culling_disabled.png
          culling_disabled.png
          29 kB
        5. blender.png
          blender.png
          224 kB
        For Gerrit Dashboard: QTBUG-77834
        # Subject Branch Project Status CR V

            notohge Norihito Tohge
            notohge Norihito Tohge
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes