Add cullingMode property to Model QML Type

So that users can specify whether culling is enabled
and which culling mode is enabled for each Model in QML.

Task-number: QTBUG-77834
Change-Id: Ie42da7f18359554159d0bf47f362852a10954a2e
Reviewed-by: Andy Nichols <andy.nichols@qt.io>