src/quick3d/qquick3dmodel_p.h
@@ -59,6 +59,7 @@ class Q_QUICK3D_EXPORT QQuick3DModel : public QQuick3DNode
     Q_PROPERTY(QSSGTessModeValues tesselationMode READ tesselationMode WRITE setTesselationMode NOTIFY tesselationModeChanged)
     Q_PROPERTY(float edgeTess READ edgeTess WRITE setEdgeTess NOTIFY edgeTessChanged)
     Q_PROPERTY(float innerTess READ innerTess WRITE setInnerTess NOTIFY innerTessChanged)
+    Q_PROPERTY(QSSGCullModeValues cullingMode READ cullingMode WRITE setCullingMode NOTIFY cullingModeChanged)
     Q_PROPERTY(bool isWireframeMode READ isWireframeMode WRITE setIsWireframeMode NOTIFY isWireframeModeChanged)
     Q_PROPERTY(bool castsShadows READ castsShadows WRITE setCastsShadows NOTIFY castsShadowsChanged)
     Q_PROPERTY(bool receivesShadows READ receivesShadows WRITE setReceivesShadows NOTIFY receivesShadowsChanged)
@@ -73,6 +74,13 @@ public:
     };
     Q_ENUM(QSSGTessModeValues)
 
+    enum QSSGCullModeValues {
+        BackfaceCulling = 1,
+        FrontfaceCulling = 2,
+        FrontAndBackfaceCulling = 3,
+        DisableCulling = 4,
+    };
+    Q_ENUM(QSSGCullModeValues)
 
     QQuick3DModel();
     ~QQuick3DModel() override;
@@ -84,6 +92,7 @@ public:
     QSSGTessModeValues tesselationMode() const;
     float edgeTess() const;
     float innerTess() const;
+    QSSGCullModeValues cullingMode() const;
     bool isWireframeMode() const;
     bool castsShadows() const;
     bool receivesShadows() const;
@@ -96,6 +105,7 @@ public Q_SLOTS:
     void setTesselationMode(QSSGTessModeValues tesselationMode);
     void setEdgeTess(float edgeTess);
     void setInnerTess(float innerTess);
+    void setCullingMode(QSSGCullModeValues cullingMode);
     void setIsWireframeMode(bool isWireframeMode);
     void setCastsShadows(bool castsShadows);
     void setReceivesShadows(bool receivesShadows);
@@ -106,6 +116,7 @@ Q_SIGNALS:
     void tesselationModeChanged(QSSGTessModeValues tesselationMode);
     void edgeTessChanged(float edgeTess);
     void innerTessChanged(float innerTess);
+    void cullingModeChanged(QSSGCullModeValues cullingMode);
     void isWireframeModeChanged(bool isWireframeMode);
     void castsShadowsChanged(bool castsShadows);
     void receivesShadowsChanged(bool receivesShadows);
@@ -122,7 +133,8 @@ private:
         TesselationInnerDirty = 0x00000010,
         WireframeDirty =        0x00000020,
         MaterialsDirty =        0x00000040,
-        ShadowsDirty =          0x00000080
+        ShadowsDirty =          0x00000080,
+        CullingModeDirty =      0x00000100,
     };
 
     QString translateSource();
@@ -131,6 +143,7 @@ private:
     QSSGTessModeValues m_tesselationMode = QSSGTessModeValues::NoTess;
     float m_edgeTess = 1.0f;
     float m_innerTess = 1.0f;
+    QSSGCullModeValues m_cullingMode = QSSGCullModeValues::BackfaceCulling;
     bool m_isWireframeMode = false;
 
     quint32 m_dirtyAttributes = 0xffffffff; // all dirty by default
