src/runtimerender/qssgrendercustommaterialsystem.cpp
@@ -1434,8 +1434,8 @@ void QSSGMaterialSystem::renderPass(QSSGCustomMaterialRenderContext &inRenderCon
     }
 
     theContext->setInputAssembler(inAssembler);
+    theContext->solveCullingOptions(inRenderContext.model.cullingMode);
 
-    theContext->setCullingEnabled(true);
     quint32 count = inCount;
     quint32 offset = inOffset;
 
